mlflow-for-build/mlflow-model-serve-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-model-serve
  namespace: default
  labels:
    app: mlflow-model-serve
spec:
  selector:
    matchLabels:
      app: mlflow-model-serve
  replicas: 1
  template:
    metadata:
      labels:
        app: mlflow-model-serve
    spec:
      containers:
      - name: mlflow
        image: "python:3.11-slim"
        command: ["/bin/bash", "-c"]
        args: ["sleep infinity"]
        resources:
          limits:
            cpu: 300m
            memory: 600Mi
          requests:
            cpu: 30m
            memory: 50Mi
        ports:
          - name: model-serve
            containerPort: 5000
            protocol: TCP
        volumeMounts:
          - name: pyvenv-volume
            mountPath: /mnt/pyvenv
      restartPolicy: Always
      volumes:
        - name: pyvenv-volume
          persistentVolumeClaim:
            claimName: mlflow-model-serve-pvc
