mlflow-for-build/mlflow-model-serve-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-model-serve-ing
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - dev-model.maulanaysfi.my.id
    secretName: 
  rules:
  - host: dev-model.maulanaysfi.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlflow-model-serve-svc
            port:
              number: 5050
